--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -1,9 +1,9 @@
-\chapter{Implementation}
+\chapter{Implementing a Web Component}
 \index{Implementation%
 @\emph{Implementation}}%
 
 \section{Overview}
-Speakur\index{Speakur} is an HTML5\index{HTML!HTML5} web application that uses the Polymer\index{Polymer} framework's Web Components\index{Web Components} architecture.
+Speakur\index{Speakur} is an HTML5\index{HTML!HTML5} web application that uses the Polymer\index{Polymer} framework's implementation of Web Components\index{Web Components}.
 It is primarily a client side application with no dedicated server component other than Firebase\index{Firebase}.
 It is delivered as a single Custom Element\index{Custom Elements}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
 You import the tag with \tcode{<link rel=import href=...>} to make it available to place on the page. 
@@ -29,7 +29,7 @@ Speakur's\index{Speakur} options or parameters are controlled with attributes\in
 %Responsive design with \tcode{flex} and \tcode{@media} attributes adjusts the interface automatically for desktop and mobile users.
 %Speakur takes advantage of data bindings to offer localization features that instantly update when the language preference is changed.
 
-\section{Layout and structure}
+\section{Layout and Structure}
 \label{sec:layout}
 
 Structurally, Speakur\index{Speakur} consists of JavaScript\index{JavaScript}, HTML, and CSS\index{CSS} files, along with a few other resource types like images and JSON\index{JSON} language files. 
@@ -81,12 +81,12 @@ The logical service elements do not have any direct visual representation.
 They perform data-related services, provide APIs, and wrap external libraries.
 It is often useful to provide a custom element wrapper around a non-WC-aware library.
 For example, the Firebase\index{Firebase} client library is a general purpose JavaScript library, and is not specifically adapted to Web Components or custom elements.
-For this reason the Polymer project maintains \tcode{<firebase-element>}\index{<firebase-element>} as a wrapper around the main Firebase library~\cite{polymercontributors2015-c}.
-Within Speakur, each component gets its data either directly from its own internal \tcode{<firebase-element>}\index{<firebase-element>}, or else from a data binding from an immediate parent element that has its own \tcode{<firebase-element>}\index{<firebase-element>}.
+For this reason the Polymer project maintains \tcode{<firebase-element>}\index{<firebase-element>|(} as a wrapper around the main Firebase library~\cite{polymercontributors2015-c}.
+Within Speakur, each component gets its data either directly from its own \tcode{<firebase\-element>}, or else from a data binding from an immediate parent element that has its own \tcode{<firebase-element>}.
 
 \Cref{f:file_layout} shows a partial listing of the internal component files.
 One of these is abstraction layer for an internationalization\index{internationalization} library.
-Following the \tcode{<firebase-element>}\index{<firebase-element>} example, 
+Following the \tcode{<firebase-element>} example, 
 I created a simple custom element wrapper around the \textbf{i18next} 
 JavaScript\index{JavaScript} library~\cite{i18nextcontributors2015}.
 This wrapper is called \tcode{<speakur-i18next>}\index{<speakur-i18next>}. 
@@ -94,7 +94,7 @@ It tells i18next where to find Speakur's translation files and creates a Polymer
 See~\cref{sec:i18n} below for details.
 Logical elements are also used to provide abstract `controllers' 
 (in the MVC\index{model-view-controller} sense), 
-facades, pseudo-OOP\index{object oriented programming (OOP)} base classes and other design patterns.
+base classes, adapters, facades, and other design patterns.
 
 \begin{figure}[htb]
 	\centerline{
@@ -117,9 +117,10 @@ for example \tcode{<speakur-post>} is used for a `live editor preview' inside \t
 Some of Speakur's internal components like \tcode{<speakur-theme>} are also base clas\-ses for other elements
 in a way that is similar but not identical to classes in object oriented programming (OOP)\index{object oriented programming (OOP)}\footnote{Note that JavaScript\index{JavaScript} itself is \textit{prototype}-based\index{prototype (JavaScript)} and does not have traditional classes or inheritance. 
 Similar behavior is obtained by using regular object instances (instead of classes) as the prototype for instantiating new objects.}. 
-Although composition or \textit{has-a} relationships are generally preferred, inheritance or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another interchangeably.
+Although composition\index{composition} or \textit{has-a} relationships are generally preferred, inheritance\index{inheritance} or \textit{is-a} relationships can make sense when you truly want to be able to substitute one instance for another interchangeably.
+JavaScript does not have the concept of a formal interface contract, which puts the burden of type checking on developers and unit tests.
 
-\section{Database design}
+\section{Database Design}
 \label{sec:database}
 
 Speakur uses Firebase for NoSQL\index{NoSQL}-style database storage.
@@ -194,7 +195,7 @@ which can be difficult in a more sophisticated application.
 But in the post vote count example, even if a malicious user sets a false count on the globally-visible value,
 we can always recalculate the true count later using the individual user vote records.
 
-\section{Component synchronization}
+\section{Component Synchronization}
 \label{sec:sync}
 
 Speakur\index{Speakur} consists of a number of Polymer\index{Polymer} components which break down the problem of presenting a discussion forum into smaller tasks.
@@ -215,25 +216,25 @@ or causes other circularity problems.
 For this reason, bindings should be used one-way across component lines,
 but two-way bindings are useful within a component to update its data model automatically from user input~\cite{polymercontributors2015-b}.
 
-Each component keeps its own \tcode{<firebase-element>}\index{<firebase-element>} to pull data from Firebase\index{Firebase} as needed,
-or in some cases the relevant object is passed in as a binding from a parent element that has its own \tcode{<firebase-element>}\index{<firebase-element>}.
+Each component keeps its own \tcode{<firebase-element>} to pull data from Firebase\index{Firebase} as needed,
+or in some cases the relevant object is passed in as a binding from a parent element that has its own \tcode{<firebase-element>}.
 This keeps database specific knowledge localized to each component, helping it ``be composable''.
 Speakur\index{Speakur} as a whole doesn't know or care what storage solution its individual components use, whether Firebase\index{Firebase} or another API\index{API}.
 
-\subsection{Data bindings and events}
+\subsection{Data Bindings and Events}
 \label{sec:databindings}
 From an MVC\index{model-view-controller} viewpoint, a Polymer element with instance variables is the `model'.
 The element's data-bound\index{data-bound template} \tcode{<template>}\index{<template>} is the `view', 
 and the JavaScript\index{JavaScript} code is the `controller'.
 Data bindings carry data information down from parent to child while DOM\index{DOM} events\index{event notification} propagate upwards.
 
-Using \tcode{<firebase-element>}\index{<firebase-element>} isolates each component from direct interaction with the general purpose Firebase\index{Firebase} JavaScript library
+Using \tcode{<firebase-element>} isolates each component from direct interaction with the general purpose Firebase\index{Firebase} JavaScript library
 and ties the database directly into the Polymer\index{Polymer} data binding system.
 Persisting a change is incredibly easy; 
 writing a new value to a variable not only saves it to the database but pushes the change
 to all other `subscribers'---whoever is viewing that post or other object at the time.
 The \tcode{data=} attribute on 
-\tcode{<firebase-element>}\index{<firebase-element>}
+\tcode{<firebase-element>}
 allows binding a variable in a component to a remote database object:
 
 \begin{lstlisting}[language=HTML5,caption={Binding the \tcode{post} variable to a database record.},label=l:fb_bind,captionpos=below]
@@ -245,14 +246,14 @@ allows binding a variable in a component to a remote database object:
 \end{lstlisting}
 
 In the example above, 
-the data retrieved by the \tcode{<firebase-element>}\index{<firebase-element>}
+the data retrieved by the \tcode{<firebase-element>}
 is bound by the \tcode{\{\{ \}\}} operators to the component's \tcode{post} variable. 
 Any changes to this database object, 
 whether locally or remotely initiated,
 will be reflected in the \tcode{post} variable
 and any associated data-bound\index{data-bound template} \tcode{<template>}\index{<template>}s, 
 and vice-versa.
-The \tcode{location=} attribute (the database source URL for this \tcode{<firebase-element>}\index{<firebase-element>})
+The \tcode{location=} attribute (the database source URL for this \tcode{<firebase-element>}\index{<firebase-element>|)}
 is bound to an expression which finds the location with the \tcode{fbLocation} method.
 Any changes in the variables \tcode{firebase\-Location}, \tcode{parentId} or \tcode{postId} will cause \tcode{fbLocation} to be recomputed,
 which could in turn cause \tcode{post} to pull from a different location.
@@ -289,7 +290,7 @@ internationalization\index{internationalization} component to update the languag
 This in turn sets the \tcode{\textbf{lc}} (locale) property in the base element.
 This property is then used in translation expressions as discussed in~\cref{sec:i18n} below.
 
-\subsection{Data-bound templates}
+\subsection{Data-Bound Templates}
 Speakur translates internal variables (the model) into visible output with the use of data-bound templates\index{data-bound template}.
 This is similar in effect to the model-view-controller\index{model-view-controller} design pattern.
 As mentioned above, the custom element itself is the `model' and its \tcode{<template>}\index{<template>} is the view.
@@ -326,8 +327,8 @@ Authentication\index{authentication} ensures that we know the identity of anyone
 and the Firebase\index{Firebase} security rules enforce authorization\index{authorization} requirements.
 
 \subsection{Authentication}
-Speakur\index{Speakur} supports signing in (authenticating\index{authentication}) users with Google\index{Google} and Facebook\index{Facebook} profiles.
-This avoids the need to create a dedicated user registration and password system by using single sign-on\index{single sign-on (SSO)} with popular Internet identity providers.
+Speakur\index{Speakur} supports signing in (authenticating\index{authentication}) users with two popular single sign-on services: Google\index{Google} and Facebook\index{Facebook}.
+This avoids the need to create a dedicated user registration and password system.
 In this scenario, Google or Facebook is an OAuth\index{OAuth} identity provider (IdP),
 and Firebase\index{Firebase} (standing in for Speakur) is a service provider (SP).
 The identity provider gives the service provider a limited selection of personal information, generally their name, profile picture, and email address.
@@ -338,7 +339,7 @@ Inside Speakur, authentication is handled by the \tcode{<firebase-login>} elemen
 A binding is set up between that and the \tcode{user} variable in \tcode{<speakur-discussion>}\index{<speakur-discussion>} so that when user authentication is completed, the \tcode{user} variable contains an object with user properties like their full name and authentication ID.
 The authentication\index{authentication} session is automatically used by any \tcode{<firebase-element>} anywhere on the page provided that their \tcode{location=} points to the same database base URL.
 
-\subsection{Firebase security rules}
+\subsection{Firebase Security Rules}
 \label{sec:fbsecurity}
 
 Authorization to perform any given action in the Speakur\index{Speakur} database is determined by consulting the nested rules in the 
@@ -351,6 +352,7 @@ The structure of the security rule object mirrors the nested hierarchy of the Fi
 Each top level key maps to rules for a particular database ``table'' like \tcode{posts}.
 These fall into three categories: read, write, and validation rules.
 These are each structured as boolean expressions (predicates) that determine whether the given action is allowed.
+Example rules are given in~\cref{l:sec_rule1} on~\cpageref{l:sec_rule1}.
 
 \begin{enumerate}
 \item \tcode{.read} rules determine whether a given record can be retrieved by the current user.
@@ -361,7 +363,7 @@ These are each structured as boolean expressions (predicates) that determine whe
 Write rules determine whether a given create, modify or delete is allowed. 
 Validate rules are run after a write rule has passed in order to check whether the new version is correctly structured per business rules or requirements.
 Each expression has access to several pre-defined variables including snapshots of the database as it exists both before and after the change would be applied.
-For example,~\cref{l:sec_rule1} shows rules for the \tcode{posts} table.
+For example,~\cref{l:sec_rule1} on~\cpageref{l:sec_rule1} shows rules for the \tcode{posts} table.
 The \tcode{.write} rule asserts that anyone can create a new post, 
 but modifying an existing post requires that you (\tcode{auth.uid}) are either the post owner or an administrator.
 The \tcode{.validate} rule ensures that all posts contain at least 4 keys: \tcode{threadId}, \tcode{text}, \tcode{author}, and \tcode{timestamp}.
@@ -369,10 +371,10 @@ More sophisticated rules and validations are possible, and rules can be nested,
 but it can be unwieldy to fit a large set of rules into a single predicate expression, 
 making them more difficult to understand and maintain.
 
-\section{Internationalization}
+\section{Internationalization and Localization}
 \label{sec:i18n}
-The process of customizing an application for local languages and customs is called internationalization (i18n) and localiation (l10n)\footnote{
-\textit{Internationalization} refers to the process of \textbf{enabling} an app to be localized, and localization refers to adapting it to a \textbf{specific} locale.
+The process of customizing an application for local languages and customs is called internationalization\index{internationalization|textbf} (i18n) and localization\index{localization|textbf} (l10n)\footnote{
+\textit{Internationalization} refers to the process of \textbf{enabling} an app to be localized, and \textit{localization} refers to adapting it to a \textbf{specific} locale.
 }. 
 Speakur\index{Speakur} offers user interface translations for 15 languages.
 The user can select a new language from the Profile dialog and the interface updates instantly.
@@ -388,7 +390,7 @@ The i18next library includes the ability to handle variable interpolation insert
 Here is a short excerpt from the English file followed by the Russian version:
 
 \begin{lstlisting}[language=JavaScript,caption=
-{String resources for internationalization\index{internationalization}.},label=l:i18n,captionpos=below]
+{String resources for internationalization\index{internationalization|textbf}.},label=l:i18n,captionpos=below]
 // from speakur-en.json
 {
   "View Comments": null,
@@ -410,15 +412,15 @@ This example shows that with the \tcode{'View Comments'} key, the corresponding 
 The other two keys illustrate variable interpolation and pluralization logic where different grammatical forms can be selected based on a numeric variable, 
 in this case, the number of replies that a post has.
 These translation strings would be used in a template like:
-\pagebreak
-\begin{lstlisting}[language=HTML5,caption={Internationalizing a data-bound template.},label=l:i18n_template,captionpos=below]
+%\pagebreak
+\begin{lstlisting}[language=HTML5,caption={Internationalizing\index{internationalization|textbf} a data-bound template.},label=l:i18n_template,captionpos=below]
 <!-- from speakur-post.html -->
 <div class='post-replies-count'>
   {{ 'replies' | $$({count: replyCount}, lc) }}
 </div>
 \end{lstlisting}
 
-\tcode{i18next}\index{i18next library} sees that a \tcode{count} variable is provided to \tcode{\$\$} and looks for that key (\tcode{rep\-lies}) with either a \tcode{\_count} or a \tcode{\_count\_plural} suffix depending on the cardinality of \tcode{count}.
+The \tcode{i18next}\index{i18next library} library sees that a \tcode{count} variable is provided to \tcode{\$\$} and looks for that key (\tcode{rep\-lies}) with either a \tcode{\_count} or a \tcode{\_count\_plural} suffix depending on the cardinality of \tcode{count}.
 In this expression the \tcode{lc} variable (the second parameter to the \tcode{\$\$} call) reflects the user's current language setting, such as \tcode{lc=en} for English or \tcode{lc=ru} for Russian.
 Interestingly, the \tcode{lc} variable is \textit{not} required by the \tcode{\$\$} filter because it already knows the current locale.
 Instead, \tcode{lc} is included in the expression merely to register a value dependency with Polymer\index{Polymer}
@@ -432,7 +434,7 @@ Adding \tcode{lc} to this expression ensures that the text is updated when the l
 %\subsection{Architecture}
 %\subsection{Libraries}
 
-Another powerful internationalization\index{internationalization} feature is provided by the moment.js library\index{moment.js library}, 
+Another powerful internationalization\index{internationalization|textbf} feature is provided by the moment.js library\index{moment.js library}, 
 a general purpose date/time library that also provides date-related localization\index{localization} services.
 Unlike the general UI strings, the date translations are not provided by Speakur\index{Speakur}, but are included in moment.js itself.
 In addition to formatting dates and times (like the time of a post) according to local conventions, 
@@ -443,14 +445,14 @@ For example, immediately after posting a new reply, its header will say ``posted
 After a minute it will say ``posted a minute ago'', and so on in idiomatic fashion appropriate to the current language.
 This text has a tooltip which gives the full localized date such as ``Wednesday, March 11th 2015 7:53 pm''.
 
-\section{Device responsive design}
+\section{Device-Responsive Design}
 \label{sec:responsive}
 As mentioned in~\cref{bg:mobile}, Speakur\index{Speakur} uses several techniques to achieve a design that automatically responds\index{responsive design} to different devices and screen sizes, 
 including mobile phones.
 The three main responsive design techniques used in Speakur are:
 \begin{enumerate}
 \item Using CSS\index{CSS} \tcode{@media}\index{@media} rules to apply different styles such as sizes and margins to different screen sizes.
-\item Using CSS Flexible boxes (a.k.a `flex') layout with \tcode{wrap} options to create structures like toolbars while allowing them to gracefully rearrange on smaller screens.
+\item Using CSS Flexible boxes (a.k.a. `flex') layout with \tcode{wrap} options to create structures like toolbars while allowing them to gracefully rearrange on smaller screens.
 \item Using a JavaScript variable (\tcode{smallScreen}) to control the behavior of data-bound templates\index{data-bound template} and provide a different experience on smaller devices.
 \end{enumerate}
 
@@ -468,8 +470,7 @@ For example, the following rule gives the main Speakur container more padding on
 }
 \end{lstlisting}
 
-CSS Flexible boxes\index{Flex} are little too complex to explain here in full, 
-but the gist is that \tcode{div}s, and nearly any other element, can be given `flex layout' attributes that provide guidance to browsers about how to align the components inside and adjust for available space.
+In summary, CSS Flexible boxes\index{Flex} let you give \tcode{<div>} and other elements `flex layout' attributes that provide guidance to browsers about how to align the contents inside and adjust for available space.
 Polymer\index{Polymer} provides convenient layout shortcuts for the standard CSS attributes~\cite{polymercontributors2015-d}.
 %For example, the following sets up a `header' with the equally 
 
@@ -478,7 +479,7 @@ Polymer\index{Polymer} provides convenient layout shortcuts for the standard CSS
 %\end{lstlisting}
 
 
-\section{Publishing and deployment}
+\section{Publishing and Deployment}
 \label{publishing}
 
 Speakur\index{Speakur} is published to \tcode{github.io}, 
@@ -492,7 +493,7 @@ and a `production' or Vulcanized\index{Vulcanize} version where all necessary re
 In a relatively small application like Speakur the difference is not huge, especially on Google Chrome\index{Google!Google Chrome} which already supports Web Components natively,
 because the HTML component transfer times are largely dwarfed by the cost of loading the actual discussion from the database.
 Future protocol enhancements like HTTP 2\index{HTTP!HTTP 2.0} may eliminate this discrepancy.
-That said, vulcanization does offer current benefits,
+That said, using Vulcanize does offer current benefits,
 as shown in~\cref{table:speakurloading} which compares the time (in milliseconds) to initially display the Speakur component and then fully load a thread with 25 comments in three popular desktop browsers.
 These figures partly reflect the degree to which each of these browsers natively supports Web Components\index{Web Components} at this time.
 At the moment Firefox\index{Mozilla!Mozilla Firefox} does not natively support as many Web Component features as Google Chrome\index{Google!Google Chrome} or Opera\index{Opera}, 
