--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -106,6 +106,8 @@
 
 \usepackage[capitalize]{cleveref}
 
+% Force cleveref ``page'' references to be lowercase despite the capitalize option above
+\crefformat{page}{page~#2#1#3}
 
 %\pretolerance=10000
 
@@ -122,7 +124,7 @@
 
 \author{Preston Brent Landers}  	% Required
 
-\address{\texttt{planders@utexas.edu}}  % Required
+\address{\texttt{planders@utexas.edu} \\~\\ \url{https://github.com/Preston-Landers/} }  % Required
 
 % Required
 \title{Speakur: Leveraging Web Components \\ for Composable Applications}
@@ -388,13 +390,14 @@ to show how Web Components can help realize software engineering principles and 
 
 Web authors can add a Speakur discussion to their page by inserting a simple HTML element at the desired spot to give the page a real-time discussion or feedback system.
 Speakur uses the Polymer framework's implementation of the draft Web Components standard to achieve the encapsulation of its internal implementation details from the containing page behind a simplified, well defined interface.
+Web Components are a proposed W3C standard for writing custom HTML tags that take advantage of new browser technologies like Shadow DOM, package importing, CSS Flexboxes and data-bound templates.
 
-Web Components are a proposed World Wide Web Consortium standard for writing custom HTML tags that take advantage of new browser technologies like Shadow DOM, package importing, CSS Flexboxes and data-bound templates.
-This report reviews Web Component technologies and provides a case study for structuring a real-world WC applet that is embedded in a larger app or system.
-The major research question is whether W3C Web Components provide a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
+This report reviews Web Components and related technologies and provides a case study for structuring a real-world WC applet that is embedded in a larger app or system.
+The major research question is whether Web Components offer a viable path towards the encapsulation and composition principles that have largely eluded web engineers thus far. 
 In other words, \textit{are components really the future of the web}? 
-Subsidiary topics include assessing the maturity and suitability of current Web Components technologies for widespread deployment and live synchronization of user interface state.
-
+Subsidiary topics include assessing the maturity and performance of current Web Components technologies,
+and evaluating methods of synchronization between user interface components and local and remote data models.
+My analysis shows that Web Components successfully address many of the key structural and organizational problems faced by web software engineers.
 
 \tableofcontents   % Table of Contents will be automatically
                    % generated and placed here.
